[package]
name = "brain"
version = "0.1.0"
edition = "2021"

[lib]
name = "brain_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Memory"] }
